# dmevent

./: .travis.yml  CMakeLists.txt  README.md
cmake/: replace.bat
example/dmeventtest/: dmeventtest.cpp
include/: dmevent.h  dmevent_config.h.in  dmos.h
src/dmevent/: dmevent.cpp  dmevent_module.cpp  dmevent_module.h  dmrouter.h  dmtype_traits.h
src/dmevent_module/: dmevent_module.cpp  dmevent_module.h
